--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,3 +1,14 @@
-<p>
-  cadastro works!
-</p>
+<header class="jumbotron">
+
+    <h1 class="text-center">Cadastro de Foto</h1>
+    
+</header>
+
+
+<main class="container">
+  
+  <div class="row">
+      <a routerLink="/" class="btn btn-primary espaco">Voutar</a>
+  </div>
+  
+</main>
