--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -6,7 +6,10 @@
 
 <main class="container">
 
+  <div class="row">
 
+    <a routerLink="/cadastro" class="btn btn-primary espaco">Nova Foto</a>
+  </div>
   <div class="row">
 
     <card *ngFor='let foto of listaFotos' [foto] = "foto" class="col-2">
