--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -6,9 +6,9 @@
 
 <main class="container">
 
-  <div class="row">
+  <div class="row col-12 mb-4">
 
-    <a routerLink="/cadastro" class="btn btn-primary espaco">Nova Foto</a>
+    <a routerLink="/cadastro" class="btn btn-primary">Nova Foto</a>
   </div>
   <div class="row">
 
