--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -6,9 +6,47 @@
 
 
 <main class="container">
+
+
+
+    <section class="row">
+        <form (ngSubmit)="salvar()" class="col-sm-7" >
+                <div class="form-group ">
+                  <label for="inputEmail4">Titulo</label>
+                  <input [(ngModel)]="foto.titulo" name="titulo"  type="text" class="form-control" id="inputTitulo" placeholder="Digite o titulo">
+                </div>
+              
+                <div class="form-group ">
+                  <label for="inputEmail4">Url</label>
+                  <input [(ngModel)]="foto.url" name="url"  type="url" class="form-control" id="inputUrl" placeholder="Digite uma url">
+                </div>
+            
+      
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Descricao</label>
+                <textarea [(ngModel)]="foto.descricao" name="descricao"  class="form-control" id="descricao" rows="3"></textarea>
+              </div>
+
+
+              <a routerLink="/" class="btn btn-secondary espaco2">Voltar</a>
+
+              <button type="submit" class="btn btn-primary">
+                Salvar
+              </button>
+    
+        </form>
+
+        <aside class="col-sm-5">
+          
+            <card  [foto] = "foto" class="col-2">
+                <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
+            </card>
+
+        </aside>
+    </section>
+
+      
   
-  <div class="row">
-      <a routerLink="/" class="btn btn-primary espaco">Voutar</a>
-  </div>
+     
   
 </main>
