--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -7,6 +7,6 @@
     <div class="card-body">
       <h5 class="card-title">{{foto.titulo}}</h5>
       <p class="card-text">{{foto.descricao}}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
     </div>
   </div>
