--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -7,13 +7,17 @@
 <main class="container">
 
   <div class="row col-12 mb-4">
-
     <a routerLink="/cadastro" class="btn btn-primary">Nova Foto</a>
   </div>
   <div class="row">
 
-    <card *ngFor='let foto of listaFotos' [foto] = "foto" class="col-2">
+    <card *ngFor='let foto of listaFotos' [foto] = "foto" class="col-lg-2 col-sm-4 mb-4">
+       
+
       <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
+      
+      <button (click)="deletar(foto)" class="btn btn-danger"> Apagar </button>
+      
     </card>
 
   </div>
