edicao de fotos

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card" >
 
     <!-- funciona como um inport -->
-    <ng-content select="foto"></ng-content>
+    <ng-content select=".foto"></ng-content>
 
 
     <div class="card-body">
