--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -39,7 +39,7 @@
         <aside class="col-sm-5">
           
             <card  [foto] = "foto" class="col-2" *ngIf="foto.url">
-                <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
+                <foto class="foto" [url]="foto.url" [titulo]="foto.titulo"></foto>  
             </card>
 
         </aside>
