--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -13,8 +13,10 @@
 
     <card *ngFor='let foto of listaFotos' [foto] = "foto" class="col-lg-2 col-sm-4 mb-4">
        
+      <a [routerLink] = "['/cadastro', foto._id]" class="foto">
+        <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
+      </a>
 
-      <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
       
       <button (click)="deletar(foto)" class="btn btn-danger"> Apagar </button>
       
