--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -7,36 +7,72 @@
 
 <main class="container">
 
-    <div class="row" *ngIf='mensagem'>
+    <div class="row" *ngIf='mensagem.conteudo'>
         <div class="col-12">
             <cp-mensagem tipo = "success">
-                {{foto.titulo}} cadastrado com sucesso
+                {{mensagem.conteudo}}
             </cp-mensagem>
         </div>
     </div>
 
     <section class="row">
-        <form (ngSubmit)="salvar()" class="col-sm-7" >
+        <form [formGroup]='formCadastro'  (ngSubmit)="salvar()" class="col-sm-7" >
                 <div class="form-group ">
                   <label for="inputEmail4">Titulo</label>
-                  <input [(ngModel)]="foto.titulo" name="titulo"  type="text" class="form-control" id="inputTitulo" placeholder="Digite o titulo">
+                  <input formControlName='titulo' required  name="titulo"  type="text" class="form-control" id="inputTitulo" placeholder="Digite o titulo">
+                    
+
+                  <div *ngIf="formCadastro.controls.titulo.errors">
+
+                    <cp-mensagem tipo="danger" *ngIf="formCadastro.controls.titulo.errors.required && formCadastro.controls.titulo.touched">
+                        Titulo obrigatorio
+                    </cp-mensagem>
+
+                    <cp-mensagem tipo="danger" *ngIf="formCadastro.controls.titulo.errors.minlength && formCadastro.controls.titulo.touched">
+                        minimo de 
+                        {{formCadastro.controls.titulo.errors.minlength.requiredLength}}
+                        caracteres
+                    </cp-mensagem>
+
+
+
+                  </div>
+                  
+                
                 </div>
               
                 <div class="form-group ">
                   <label for="inputEmail4">Url</label>
-                  <input [(ngModel)]="foto.url" name="url"  type="url" class="form-control" id="inputUrl" placeholder="Digite uma url">
+                  <input formControlName='url' required   name="url"  type="url" class="form-control" id="inputUrl" placeholder="Digite uma url">
+              
+                      
+                  <div *ngIf="formCadastro.controls.url.errors">
+
+                    <cp-mensagem tipo="danger" *ngIf="formCadastro.controls.url.errors.required && formCadastro.controls.url.touched">
+                        Titulo obrigatorio
+                    </cp-mensagem>
+
+                    <cp-mensagem tipo="danger" *ngIf="formCadastro.controls.url.errors.minlength && formCadastro.controls.url.touched">
+                       Url obrigatoria
+                    </cp-mensagem>
+
+
+
+                  </div>
+              
+              
                 </div>
             
       
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Descricao</label>
-                <textarea [(ngModel)]="foto.descricao" name="descricao"  class="form-control" id="descricao" rows="3"></textarea>
+                <textarea formControlName='descricao' name="descricao"  class="form-control" id="descricao" rows="3"></textarea>
               </div>
 
 
               <a routerLink="/" class="btn btn-secondary espaco2">Voltar</a>
 
-              <button type="submit" class="btn btn-primary">
+              <button [disabled]="formCadastro.invalid" type="submit" class="btn btn-primary">
                 Salvar
               </button>
     
