--- a/src/app/listagem/listagem.component.html
+++ b/src/app/listagem/listagem.component.html
@@ -7,11 +7,22 @@
 <main class="container">
 
   <div class="row col-12 mb-4">
-    <a routerLink="/cadastro" class="btn btn-primary">Nova Foto</a>
+    <form class="input-group">
+        <span class="input-group-prepend">
+
+            <a routerLink="/cadastro" class="btn btn-primary">Nova Foto</a>
+    
+        </span>
+
+        <input (input)='true' #inputBusca type="search" class="form-control">
+
+    </form>
+    
+
   </div>
   <div class="row">
 
-    <card *ngFor='let foto of listaFotos' [foto] = "foto" class="col-lg-2 col-sm-4 mb-4">
+    <card *ngFor='let foto of listaFotos | filtroPorTitulo:inputBusca.value' [foto] = "foto" class="col-lg-2 col-sm-4 mb-4">
        
       <a [routerLink] = "['/cadastro', foto._id]" class="foto">
         <foto [url]="foto.url" [titulo]="foto.titulo"></foto>  
